2024-03-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/Makefile.am: Give up on the attempt to selectively
	force C++ linkage by introducing a C++ file for components which
	should have C++ linkage.  A libtool bug, and an Automake weakness
	prevented this from working as expected.

2024-02-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/hrz.c (RegisterHRZImage): Remove defective comment.

2024-02-26  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/hrz.c: Seekable blob should not be needed.

2024-02-25  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/tiff.c: Do not copy TIFFTAG_ORIENTATION from EXIF.
	It is already handled by image->orientation variable.

	* coders/tga.c: Emit warning to logs when orientation is
	not supported.
	FIED: Need to research what case was expected to be
	tested here. This test case can never be true and so it
	is commented out for the moment.

2024-02-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tga.c (WriteTGAImage): Eliminate compiler warnings.

2024-02-24  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/tga.c: Propagate orientation in TGA writer.
	The linescan order must be reverted.

2024-02-23  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/configure/configure.rc: Disable static single threaded
	runtime choice. This runtime is not suported in Visual Studio 2008
	and all newer versions.

2024-02-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c: If module gets built, but EnableBrokenCoders is
	not true, then include empty registration functions.

	* Makefile.am: Rename coders/acppfile.cpp to magick/acppfile.cpp
	and include some in-progress changes which are necessary for the
	build to still work.

2024-02-22  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat: G,K and Y tests started to fail
	before several months without knowing why. Do not stop. Too bad.
	Added test for HRZ format.
