@@ -44,7 +44,8 @@
 <li><p>utilities/Makefile.am: Give up on the attempt to selectively
 force C++ linkage by introducing a C++ file for components which
 should have C++ linkage.  A libtool bug, and an Automake weakness
-prevented this from working as expected.</p></li>
+prevented this from working as expected.
+(UTILITIES_CLEANFILES): Clean-up utilities/tests/composite_tmp.msl.</p></li>
 </ul>
 </blockquote>
 <p>2024-02-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
